# data-engineering

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
course/modules/: modules.json
docs/en/: config.json  home.md
docs/pt-br/: config.json  home.md
platform/streamlit/: Dockerfile  app.py
platform/streamlit/pages/: 01_Learner_Dashboard.py  02_Platform_Overview.py
platform/streamlit/services/: docs.py  platform.py  progress.py
tooling/: validate.py
tooling/validators/: foundations.py
