[project]
name = "datatopics-data-engineering"
version = "0.1.0"
description = "Modern open source data engineering course"
requires-python = ">=3.12"

dependencies = [
    "streamlit==1.57.0",
    "PyYAML==6.0.2",
    "ruff==0.13.0",
    "pre-commit==4.3.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"